Masks with anamorphic aspect ratios wrong #105590

Closed
opened 2023-03-09 09:24:17 +01:00 by Steffen Dünner · 7 comments

System Information
Operating system: Linux-5.15.0-67-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.30.02

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-09 05:15, hash: c77b78ad53e9
Worked: (newest version of Blender that worked as expected)

Short description of error
When your output is set to some non-square pixel aspect ratio (PAR), Masks are not correctly using this PAR.

I have to deal with 4.6k anamorphic footage at the moment and the "anamorphic squeeze" (or PAR) is 2:1.
Setting everything up correctly gives me correctly sized images during masking in Blender but sadly the masks' aspect ratio isn't read correctly by the Compositor:

image
image
image

(sadly the Compositors backdrop isn't offering aspect ratio correction, but that's another report).

I uploaded a super simple repro file with a single anamorphic frame and a mask on it.

Exact steps for others to reproduce the error

  • Download the attached blend file, unpack it and open it.
  • Switch to the "Motion Tracking" layout (should be the case when you open it):
    image
  • As you can see, everything is set up correctly but the aspect ratio of the mask in the Compositor is not correct.
    On the upper left you can see the unsqueezed output of the comp.
**System Information** Operating system: Linux-5.15.0-67-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.30.02 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-09 05:15, hash: `c77b78ad53e9` Worked: (newest version of Blender that worked as expected) **Short description of error** When your output is set to some non-square pixel aspect ratio (PAR), Masks are not correctly using this PAR. I have to deal with 4.6k anamorphic footage at the moment and the "anamorphic squeeze" (or PAR) is 2:1. Setting everything up correctly gives me correctly sized images during masking in Blender but sadly the masks' aspect ratio isn't read correctly by the Compositor: ![image](/attachments/a2033fed-9fc8-4c27-8506-1de7f4b6fa9d) ![image](/attachments/9d4fb47a-a552-4744-86f8-e7fa17ecaf7f) ![image](/attachments/158ead17-773d-482f-9d41-de9933d779a2) (sadly the Compositors backdrop isn't offering aspect ratio correction, but that's another report). I uploaded a super simple repro file with a single anamorphic frame and a mask on it. **Exact steps for others to reproduce the error** - Download the attached blend file, unpack it and open it. - Switch to the "Motion Tracking" layout (should be the case when you open it): ![image](/attachments/c4d803a5-27a2-46af-9b42-4fe68bcc5906) - As you can see, everything is set up correctly but the aspect ratio of the mask in the Compositor is not correct. On the upper left you can see the unsqueezed output of the comp.
Steffen Dünner added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-09 09:24:17 +01:00
Member

Scale node as a work-around, just pointing it out in case you hadn't thought of it. This is just an FYI, and not meant to dismiss the issue you reported.

Scale node as a work-around, just pointing it out in case you hadn't thought of it. This is just an FYI, and not meant to dismiss the issue you reported.

No worries, using a scale node is what I'm doing actually to work around that problem. ;)

No worries, using a scale node is what I'm doing actually to work around that problem. ;)

I can confirm.
I feel the Aspect X/Y should be considered in the Mask node.

I can confirm. I feel the `Aspect X/Y` should be considered in the `Mask` node.
Germano Cavalcante added
Module
VFX & Video
Status
Confirmed
Interest
Compositing
and removed
Status
Needs Triage
labels 2023-03-10 22:41:44 +01:00
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-11 12:10:37 +01:00

@SteffenD Did you mean to close this report? @mano-wii had confirmed it.

@SteffenD Did you mean to close this report? @mano-wii had confirmed it.

I imagine it must have been accidental, let's let the VFX & Video team decide what to do with this issue.

I imagine it must have been accidental, let's let the `VFX & Video` team decide what to do with this issue.
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-03-13 19:51:39 +01:00

Oops, how did I even close this?
This was an accident, thanks for reopening.

Oops, how did I even close this? This was an accident, thanks for reopening.
Germano Cavalcante added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-14 03:53:19 +01:00
Sergey Sharybin added
Type
Bug
and removed
Type
Report
labels 2023-03-22 12:32:53 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-28 12:36:28 +02:00

Thanks a lot for fixing this!

Thanks a lot for fixing this!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105590
No description provided.