Fix #105590: Compositor: Masks don't consider anamorphic aspect ratio